# rabbitmesh-lib

./: .gitignore  Cargo.toml  LICENSE-MIT  MACRO_FRAMEWORK_ANALYSIS.md  PUBLISH_GUIDE.md  QUICK_START.md  RABBITMESH_AGENT.md  README.md  publish.sh  rabbitmesh_agent.py
client-generator/: README.md  package-lock.json  package.json
client-generator/blog-platform-client/: authClient.ts  blogClient.ts  client.ts  example.ts  index.ts  package.json
client-generator/ecommerse/: auth-manager.ts  authClient.ts  client.ts  index.ts  orderClient.ts  package-lock.json  package-test.json  package.json  test-client.js  tsconfig.json  userClient.ts
client-generator/ecommerse/rabbitmesh-client-demo/: package-lock.json  package.json
client-generator/ecommerse/rabbitmesh-client-demo/src/: App.tsx  main.tsx
client-generator/example-client/: README.md  client.ts  example.ts  index.ts  package-lock.json  package.json  todoClient.ts  tsconfig.json  types.ts
client-generator/rbl-client/: authClient.ts  client.ts  index.ts  orderClient.ts  package.json  types.ts  userClient.ts
client-generator/rq-client/: authClient.ts  orderClient.ts  package.json  tsconfig.json  userClient.ts
client-generator/src/: generate.ts  generator.ts  parser.ts  types.ts
client-generator/todo-app-client/: authClient.ts  client.ts  notificationClient.ts  package-lock.json  package.json  test-example.js  todoClient.ts  tsconfig.json
client-generator/universal-client/: authClient.ts  notificationClient.ts  package-lock.json  package.json  stress-auth.js  stress-todo.js  stress.js  test.js  todoClient.ts  tsconfig.json  types.ts
docs/: AUTHORIZATION_MACROS_DESIGN.md  CLIENT_GENERATOR_SUCCESS.md  DEVELOPER_GUIDE.md  IMPLEMENTATION_SUMMARY.md  RABBITMESH_AGENT.md
examples/blog-platform/: Makefile  README.md  test-macro-client.rs
examples/blog-platform/api-gateway/: Cargo.toml
examples/blog-platform/api-gateway/src/: config.rs  main.rs
examples/blog-platform/auth-service/: Cargo.toml
examples/blog-platform/auth-service/src/: config.rs  main.rs  service.rs  utils.rs
examples/blog-platform/blog-common/: Cargo.toml
examples/blog-platform/blog-common/src/: auth.rs  lib.rs  openapi.rs
examples/blog-platform/blog-common/src/contracts/: auth.rs  comment.rs  mod.rs  post.rs
examples/blog-platform/comment-service/: Cargo.toml
examples/blog-platform/comment-service/src/: config.rs  main.rs  service.rs  utils.rs
examples/blog-platform/post-service/: Cargo.toml
examples/blog-platform/post-service/src/: config.rs  main.rs  service.rs  utils.rs
examples/blog-platform/test-auto-service/: Cargo.toml
examples/blog-platform/test-auto-service/src/: main.rs
examples/blog-platform/test-macro-service/: Cargo.toml  test.py
examples/blog-platform/test-macro-service/src/: main.rs
examples/comprehensive-ecommerce/auth-service/src/: main.rs  service.rs
examples/comprehensive-ecommerce/order-service/: Cargo.toml  Dockerfile
examples/comprehensive-ecommerce/order-service/src/: main.rs  model.rs  service.rs
examples/comprehensive-ecommerce/user-service/: Cargo.toml  Dockerfile
examples/comprehensive-ecommerce/user-service/src/: main.rs  service.rs
examples/ecommerce/: Cargo.toml  README.md  docker-compose.yml  ecosystem.config.js
examples/ecommerce-microservices/: README.md
examples/ecommerce-microservices/api-gateway/: Cargo.toml
examples/ecommerce-microservices/api-gateway/src/: main.rs
examples/ecommerce-microservices/product-service/: Cargo.toml
examples/ecommerce-microservices/product-service/src/: main.rs
examples/ecommerce-microservices/user-service/: Cargo.toml
examples/ecommerce-microservices/user-service/src/: main.rs
examples/ecommerce/auth-service/: Cargo.toml  Dockerfile
examples/ecommerce/auth-service/src/: config.rs  handler.rs  main.rs  model.rs  service.rs  utils.rs
examples/ecommerce/gateway/: Cargo.toml  Dockerfile
examples/ecommerce/gateway/src/: config.rs  main.rs
examples/ecommerce/order-service/src/: config.rs  database.rs  handler.rs  main.rs  service.rs  utils.rs
examples/ecommerce/scripts/: build-services.sh  init-mongo.js
examples/ecommerce/src/: gateway.rs  main.rs  order_service.rs  product_service.rs  user_service.rs
examples/ecommerce/user-service/: Cargo.toml
examples/ecommerce/user-service/src/: config.rs  database.rs  handler.rs  main.rs  model.rs  service.rs  utils.rs
examples/simple-demo/: Cargo.toml
examples/simple-demo/src/: main.rs
examples/simple-todo/: Cargo.toml  README.md
examples/simple-todo/src/: gateway.rs  main.rs  models.rs  service.rs
rabbitmesh/: Cargo.toml
rabbitmesh-gateway/: Cargo.toml
rabbitmesh-gateway/src/: lib.rs  registry.rs  router.rs
rabbitmesh-macros/: Cargo.toml  README.md
rabbitmesh-macros/docs/: auth-macros.md  caching-macros.md  database-macros.md  event-sourcing-macros.md  observability-macros.md  resilience-macros.md  service-macros.md  validation-macros.md  workflow-macros.md
rabbitmesh-macros/examples/: service_definition.rs
rabbitmesh-macros/src/: authorization.rs  caching.rs  database.rs  dynamic_discovery.rs  lib.rs  lib_backup.rs  lib_old.rs  lib_simple.rs  observability.rs  registry.rs  service_definition.rs  service_impl.rs  service_method.rs  universal.rs  validation.rs  workflow.rs
rabbitmesh-macros/src/auth/: abac.rs  jwt.rs  mod.rs  rbac.rs
rabbitmesh-macros/src/caching/: distributed.rs  memory.rs  mod.rs  redis.rs
rabbitmesh-macros/src/database/: transaction.rs
rabbitmesh-macros/src/eventsourcing/: aggregate.rs  cqrs.rs  event_store.rs  mod.rs  projection.rs
rabbitmesh-macros/src/observability/: logging.rs  metrics.rs  mod.rs  tracing.rs
rabbitmesh-macros/src/resilience/: bulkhead.rs  circuit_breaker.rs  mod.rs  retry.rs  timeout.rs
rabbitmesh-macros/src/validation/: input.rs  mod.rs  schema.rs
rabbitmesh-macros/src/workflow/: choreography.rs  mod.rs  orchestrator.rs  saga.rs  state_machine.rs
rabbitmesh/examples/: simple_service.rs
rabbitmesh/src/: client.rs  connection.rs  error.rs  lib.rs  message.rs  rpc.rs  service.rs
(+11 files in other folders)
