[package]
name = "rabbitmesh-gateway"
version = "0.1.0"
edition = "2021"
authors = ["RabbitMesh Team <rabbitmesh@example.com>"]
description = "Auto-generating API gateway for RabbitMesh microservices"
license = "MIT"
repository = "https://github.com/rabbitmesh/rabbitmesh"
homepage = "https://github.com/rabbitmesh/rabbitmesh"
documentation = "https://docs.rs/rabbitmesh-gateway"
keywords = ["gateway", "microservices", "rabbitmq", "api-gateway"]
categories = ["web-programming::http-server"]

[dependencies]
# Core framework
rabbitmesh = { path = "../rabbitmesh" }
rabbitmesh-macros = { path = "../rabbitmesh-macros" }

# HTTP server
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

# GraphQL
async-graphql = { workspace = true }
async-graphql-axum = { workspace = true }

# Async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Service registry
inventory = { workspace = true }

# Logging
tracing = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
tracing-subscriber = { workspace = true }