[package]
name = "rabbitmesh-macros"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Proc macros for RabbitMesh microservices framework"
keywords.workspace = true
categories.workspace = true

[lib]
proc-macro = true

[dependencies]
# Proc macro dependencies
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }

# Service registry - removing inventory for simpler approach
# inventory = { workspace = true }

# Error handling
thiserror = { workspace = true }

[dev-dependencies]
trybuild = "1.0"