[package]
name = "rabbitmesh-macros"
version = "0.1.0"
edition = "2021"
authors = ["RabbitMesh Team <rabbitmesh@example.com>"]
description = "Procedural macros for the RabbitMesh microservices framework"
license = "MIT"
repository = "https://github.com/hangsiahong/rabbitmesh-rs"
homepage = "https://github.com/hangsiahong/rabbitmesh-rs"
documentation = "https://docs.rs/rabbitmesh-macros"
keywords = ["macros", "microservices", "rabbitmq", "procedural-macros"]
categories = ["development-tools::procedural-macro-helpers"]

[lib]
proc-macro = true

[dependencies]
# Proc macro dependencies
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }

# Error handling
thiserror = "1.0"

[dev-dependencies]
trybuild = "1.0"