[package]
name = "rabbitmesh-macros"
version = "0.2.0"
edition = "2021"
authors = ["RabbitMesh Team <rabbitmesh@example.com>"]
description = "Universal procedural macros for RabbitMesh - supports RBAC, ABAC, caching, validation, observability, and more"
license = "MIT"
repository = "https://github.com/hangsiahong/rabbitmesh-rs"
homepage = "https://github.com/hangsiahong/rabbitmesh-rs"
documentation = "https://docs.rs/rabbitmesh-macros"
keywords = ["macros", "microservices", "rabbitmq", "authorization", "rbac", "abac"]
categories = ["development-tools::procedural-macro-helpers", "authentication"]

[lib]
proc-macro = true

[dependencies]
# Procedural macro essentials
proc-macro2 = "1.0"
quote = "1.0" 
syn = { version = "2.0", features = ["full", "extra-traits", "parsing"] }

# Core runtime support
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
tracing = "0.1"

# File system and parsing support for dynamic discovery
toml = "0.8"
walkdir = "2.4"

# Error handling
thiserror = "1.0"

# Authorization support (optional)
jsonwebtoken = { version = "9.2", optional = true }
bcrypt = { version = "0.15", optional = true }

# Database support (optional)
mongodb = { version = "2.8", optional = true }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "mysql", "sqlite"], optional = true }

# Caching support (optional)
redis = { version = "0.24", optional = true }

# Validation support (optional)
regex = { version = "1.10", optional = true }
validator = { version = "0.16", features = ["derive"], optional = true }

# Observability support (optional)
metrics = { version = "0.21", optional = true }

[features]
default = ["auth", "validation", "observability"]
auth = ["jsonwebtoken", "bcrypt"]
validation = ["regex", "validator"]  
database = ["mongodb", "sqlx"]
caching = ["redis"]
observability = ["metrics"]
full = ["auth", "validation", "database", "caching", "observability"]

[dev-dependencies]
trybuild = "1.0"
tokio-test = "0.4"