[package]
name = "ecommerce-example"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Complete ecommerce microservices example using RabbitMesh"

[dependencies]
# Core framework
rabbitmesh = { path = "../../rabbitmesh" }
rabbitmesh-macros = { path = "../../rabbitmesh-macros" }  
rabbitmesh-gateway = { path = "../../rabbitmesh-gateway" }

# Async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Unique IDs
uuid = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Configuration
config = { workspace = true }

# Time
chrono = { workspace = true }