[package]
name = "simple-demo"
version.workspace = true
edition.workspace = true

[dependencies]
rabbitmesh = { path = "../../rabbitmesh" }
rabbitmesh-gateway = { path = "../../rabbitmesh-gateway" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
axum = { workspace = true }