[package]
name = "blog-api-gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
rabbitmesh-gateway = { path = "../../../rabbitmesh-gateway" }
blog-common = { path = "../blog-common" }
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "time", "local-time"] }
anyhow = "1.0"
axum = { version = "0.7" }
utoipa = { version = "4.0", features = ["axum_extras", "chrono"] }
utoipa-swagger-ui = { version = "6.0", features = ["axum"] }
time = { version = "0.3", features = ["formatting", "macros"] }