[package]
name = "blog-common"
version = "0.1.0"
edition = "2021"

[dependencies]
rabbitmesh = { path = "../../../rabbitmesh" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
utoipa = { version = "4.0", features = ["axum_extras", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }