[package]
name = "test-macro-service"
version = "0.1.0"
edition = "2021"

[dependencies]
rabbitmesh = { path = "../../../rabbitmesh" }
rabbitmesh-macros = { path = "../../../rabbitmesh-macros" }
blog-common = { path = "../blog-common" }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "time", "local-time"] }
time = { version = "0.3", features = ["formatting", "macros"] }