[package]
name = "api-gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
rabbitmesh-gateway = { path = "../../../rabbitmesh-gateway" }
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
axum = { version = "0.7" }