[package]
name = "gateway"
version = "0.1.0"
edition = "2024"

[dependencies]
rabbitmesh = { workspace = true }
rabbitmesh-macros = { workspace = true }
rabbitmesh-gateway = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
config = { workspace = true }
chrono = { workspace = true }