[package]
name = "user-service"
version = "0.1.0"
edition = "2024"

[dependencies]
rabbitmesh = { workspace = true }
rabbitmesh-macros = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
mongodb = { workspace = true }
bcrypt = { workspace = true }
config = { workspace = true }
jsonwebtoken = { workspace = true }